# Having-learnt

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/api/search/: route.ts
app/courses/: page.tsx
app/courses/[courseId]/: page.tsx
app/courses/[courseId]/lectures/[lectureId]/: page.tsx
app/search/: page.tsx
components/: Callout.tsx  CourseNav.tsx  Theorem.tsx
content/courses/optimization-methods/: course.yml
content/courses/optimization-methods/lectures/lecture-07-gradient-descent/: source.yml
content/courses/optimization-methods/lectures/lecture-07-gradient-descent/blocks/opt-gd-001/: block.yml  explanation.mdx
content/courses/optimization-methods/lectures/lecture-07-gradient-descent/blocks/opt-gd-002/: block.yml  (+1 more)
content/courses/optimization-methods/lectures/lecture-07-gradient-descent/extracted/: outline.yml
content/courses/quantization-theory/: course.yml
content/courses/quantization-theory/lectures/lecture-01-randomized-hadamard-quantization/: source.yml
inbox/chats/: 梯度下降法讲解.txt  量化论文逐步讲解.txt
lib/: content.ts
scripts/: render_pdf.py
scripts/studyvault/: __init__.py  cli.py
scripts/studyvault/align/: __init__.py
scripts/studyvault/chat/: __init__.py  parse_plain_chat.py
scripts/studyvault/index/: __init__.py  build_search_index.py
scripts/studyvault/ingest/: __init__.py  quantization_chat.py
scripts/studyvault/segment/: __init__.py
scripts/studyvault/validate/: __init__.py
(+32 files in other folders)
