[project]
name = "studyvault"
version = "0.1.0"
description = "AI Study Vault - Content processing pipeline"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.23.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
studyvault = "studyvault.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
